syntax = "proto3";

// This file follows google's gRPC naming conventions:
// https://cloud.google.com/apis/design/naming_convention

import "google/protobuf/wrappers.proto";

option go_package = "gitlab.figo.systems/platform/monoskope/monoskope/pkg/api/domain/commands";

package commands;

message CreateTenantCommandResult {
  // Unique identifier of the tenant created (UUID 128-bit number)
  string id = 1;
}

// Request to create a new tenant
message CreateTenantCommand {
  // Name of the tenant
  string name = 1; // required
  // Prefix for namespaces and other resources related to the tenant
  string prefix = 2; // required
}

// Request to get a single tenant
message GetTenantCommand {
  oneof find_by {
    string id = 1;
    string name = 2;
  }
}

// Request to update a single tenant
message UpdateTenantCommand {
  // Unique identifier of the tenant to update (UUID 128-bit number)
  string id = 1; // required
  // The information to update
  Update update = 2; // required

  message Update {
    // New name for the tenant
    google.protobuf.StringValue name = 1;
  }
}

// Request to delete a single tenant
message DeleteTenantCommand {
  // Unique identifier of the tenant to delete (UUID 128-bit number)
  string id = 1; // required
}
