syntax = "proto3";

// This file follows google's gRPC naming conventions:
// https://cloud.google.com/apis/design/naming_convention

import "api/domain/projections/metadata.proto";

option go_package = "gitlab.figo.systems/platform/monoskope/monoskope/pkg/api/domain/projections";

package projections;

// Certficates can exist for any aggregate and are mainted by the control plane.
message Cluster {
  // Unique identifier of the cluster (UUID 128-bit number)
  string referenced_aggregate_id = 1;
  // Type of the aggregate referenced
  string aggregate_type = 2;
  // actual certificate
  bytes certificate = 3;
  // bundle of CA certificates for the certificate managed
  bytes ca_cert_bundle = 4;
  // Metadata about the projection
  LifecycleMetadata metadata = 5;
}